<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        style="@style/Titles"
        android:id="@+id/textView" />

    <ToggleButton
        android:text="@string/toggle"
        android:hint="@string/toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_input"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textOff="@string/toggle_button"
        android:textOn="@string/untoggle_button" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/input_name"
        android:ems="10"
        android:id="@+id/input_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/input_group"
        android:ems="10"
        android:id="@+id/input_group" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom">

    <Button
        android:text="@string/send_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/send_data"
        android:layout_gravity="center_horizontal|bottom"/>

</LinearLayout>
</LinearLayout>